feat(metadata): Save embedded thumbnail (JPEG) - beta.